--- a/ios/VendorApp.xcodeproj/xcshareddata/xcschemes/VendorApp.xcscheme
+++ b/ios/VendorApp.xcodeproj/xcshareddata/xcschemes/VendorApp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "VendorApp.app"
-               BlueprintName = "VendorApp"
-               ReferencedContainer = "container:VendorApp.xcodeproj">
+               BuildableName = "DriverApp.app"
+               BlueprintName = "DriverApp"
+               ReferencedContainer = "container:DriverApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "VendorAppTests.xctest"
-               BlueprintName = "VendorAppTests"
-               ReferencedContainer = "container:VendorApp.xcodeproj">
+               BuildableName = "DriverAppTests.xctest"
+               BlueprintName = "DriverAppTests"
+               ReferencedContainer = "container:DriverApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "VendorApp.app"
-            BlueprintName = "VendorApp"
-            ReferencedContainer = "container:VendorApp.xcodeproj">
+            BuildableName = "DriverApp.app"
+            BlueprintName = "DriverApp"
+            ReferencedContainer = "container:DriverApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "VendorApp.app"
-            BlueprintName = "VendorApp"
-            ReferencedContainer = "container:VendorApp.xcodeproj">
+            BuildableName = "DriverApp.app"
+            BlueprintName = "DriverApp"
+            ReferencedContainer = "container:DriverApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
