--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VendorApp",
+  "name": "DriverApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
     "react-native": "0.83.1",
     "react-native-device-info": "^15.0.1",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^8.0.0",
     "react-native-reanimated": "^4.2.1",
